@@ -9,6 +9,10 @@ In Progress
 - Ctrl+Escape temporarily drops the timeout times for Meterpreter 
   commands to 5s, across the board. If a Meterpreter session appears
   unresponsive, try this to force any hung commands to timeout
+- Armitage now warns when a team server is non-responsive by making
+  its server button purple. When the server is responsive again, the 
+  button will turn its normal color again. This requires that you're
+  connected to multiple team servers.
 
 15 May 14 (tested against msf git revision: 0a4c10876d)
 ---------
